# nbx-hs

./: ChangeLog.md  Makefile  README.md  nbx-help.txt  nbx.cabal  nbx.yml  package.yaml  stack.yaml
app/: Cli.hs  CommandLine.hs
app/Cli/: Commands.hs
app/CommandLine/: Parse.hs
examples/: commands.txt
src/: Command.hs  Concurrency.hs  Format.hs  Main.hs  Nbx.hs  Parse.hs  Print.hs  Process.hs  Processor.hs  Run.hs  Shell.hs
src/Command/: Dev.hs  Live.hs  Parse.hs  Stack.hs
src/Nbx/: Config.hs  Parser.hs  Print.hs  Schema.hs
src/Process/: Formatter.hs  Processor.hs  Types.hs
src/Processor/: Internal.hs  Types.hs
src/Shell/: Concurrency.hs  Internal.hs  Types.hs
test-scripts/: bad.sh  good-then-bad.sh  good.sh  noisy-good.sh
test-scripts/bash/: bad.sh  good-then-bad.sh  noisy-good.sh
